# serializer version: 1
# name: test_binary_sensor_snapshot[binary_sensor.voorbeeldstraat_12_teststad_energy_free_energy_active-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.voorbeeldstraat_12_teststad_energy_free_energy_active',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Free energy active',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.RUNNING: 'running'>,
    'original_icon': None,
    'original_name': 'Free energy active',
    'platform': 'budget_thuis',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'free_energy_active',
    'unique_id': 'budget_thuis_test_entry_free_energy_active',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor_snapshot[binary_sensor.voorbeeldstraat_12_teststad_energy_free_energy_active-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'running',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Voorbeeldstraat 12, Teststad - Energy Free energy active',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.voorbeeldstraat_12_teststad_energy_free_energy_active',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensor_snapshot[binary_sensor.voorbeeldstraat_12_teststad_energy_free_energy_eligible-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.voorbeeldstraat_12_teststad_energy_free_energy_eligible',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Free energy eligible',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Free energy eligible',
    'platform': 'budget_thuis',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'free_energy_eligible',
    'unique_id': 'budget_thuis_test_entry_free_energy_eligible',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor_snapshot[binary_sensor.voorbeeldstraat_12_teststad_energy_free_energy_eligible-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Voorbeeldstraat 12, Teststad - Energy Free energy eligible',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.voorbeeldstraat_12_teststad_energy_free_energy_eligible',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
